# easy_api_connector

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
src/easy_api_connector/: base_api_connector.py  base_connector.py  descriptors.py  enums.py  schemas.py
