[project]
name = "easy_api_connector"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
  "pydantic>=2.0",
  "httpx>=0.24.1",
]

[project.optional-dependencies]
dev = [
  "add-trailing-comma==3.0.1",
  "autoflake==2.2.0",
  "black==23.7.0",
  "isort==5.12.0",
  "mypy==1.5.0",
  "wemake-python-styleguide==0.18.0",
]

[tool.black]
line-length = 120

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
